# prodockit-extensions

./: .gitignore  LICENSE  PLAN-16.md  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.md  installation.md  introduction.md  macros.md  pdf.md
docs/about/: changelog.md  license.md
docs/extensions/: bibliography.md  citations.md  glossary.md  headings.md  index-terms.md  refs.md  tables.md
docs/stylesheets/: extra.css
overrides/partials/: actions.html  copyright.html
src/prodockit/: __init__.py  _zensical.py  bibliography.py  citations.py  glossary.py  headings.py  index.py  refs.py  settings.py  tables.py  util.py  wordcount.py  zensical_macros.py
src/prodockit/pdf/: __init__.py  build.py  cli.py  config.py  css.py  html.py  icons.py  index.py  lua.py  mermaid.py  release.py  rotate.py  source_bundle.py
src/zendoc/: __init__.py  _zensical.py  citations.py  extension.py  glossary.py  headings.py  inlinepatterns.py  refs.py  registry.py  settings.py  treeprocessors.py  util.py  wordcount.py  zensical_macros.py
src/zendoc/pdf/: __init__.py  build.py  cli.py  config.py  css.py  html.py  icons.py  lua.py  mermaid.py
tests/: test_bibliography.py  test_citations.py  test_docs_render_cleanly.py  test_extension.py  test_glossary.py  test_headings.py  test_index.py  test_pdf_build.py  test_pdf_cli.py  test_pdf_config.py  test_pdf_css.py  test_pdf_html.py  test_pdf_icons.py  test_pdf_index.py  test_pdf_lua.py  test_pdf_mermaid.py  test_pdf_rotate.py  test_pdf_source_bundle.py  test_references.py  test_refs.py  test_registry.py  test_settings.py  test_tables.py  test_util.py  test_wordcount.py  test_zensical.py  test_zensical_integration.py  test_zensical_macros.py
