[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendoc"
version = "0.2.0"
description = "A family of Python-Markdown extensions for section cross-references and bibliography/citation handling, built for use with Zensical"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Mark Buckwell" },
]
requires-python = ">=3.10"
keywords = ["markdown", "python-markdown", "zensical", "mkdocs", "extension"]
dependencies = [
  "Markdown>=3.4",
  "zensical",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/buckwem/zendoc-extension"
Documentation = "https://buckwem.github.io/zendoc-extension/"
Issues = "https://github.com/buckwem/zendoc-extension/issues"

[project.entry-points."markdown.extensions"]
"zendoc.headings" = "zendoc.headings:HeadingsExtension"
"zendoc.refs" = "zendoc.refs:RefsExtension"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "types-Markdown",
  "pytest",
  "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zendoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
strict = true
