[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zendoc"
version = "0.10.0"
description = "A family of extensions for Zensical needed for professional and academic documentation: section cross-references, bibliography/citation handling, a glossary, a Pandoc/WeasyPrint PDF pipeline, and Jinja macros for word counts and reference-style spacing"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Mark Buckwell" },
]
requires-python = ">=3.10"
keywords = ["markdown", "python-markdown", "zensical", "extension", "pdf", "pandoc"]
dependencies = [
  "Markdown>=3.4",
  "zensical",
  "beautifulsoup4>=4.12",
  "click>=8.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/buckwem/zendoc-extension"
Documentation = "https://buckwem.github.io/zendoc-extension/"
Issues = "https://github.com/buckwem/zendoc-extension/issues"

[project.entry-points."markdown.extensions"]
"zendoc.headings" = "zendoc.headings:HeadingsExtension"
"zendoc.refs" = "zendoc.refs:RefsExtension"
"zendoc.citations" = "zendoc.citations:CitationsExtension"
"zendoc.glossary" = "zendoc.glossary:GlossaryExtension"

[project.scripts]
zendoc = "zendoc.pdf.cli:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "types-Markdown",
  "types-beautifulsoup4",
  "pytest",
  "pytest-cov",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zendoc"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# One CSS/Lua rule (or descriptive test name) per source line - wrapping
# would fragment the generated content's own readability for no benefit.
"src/zendoc/pdf/css.py" = ["E501"]
"src/zendoc/pdf/lua.py" = ["E501"]
"src/zendoc/zensical_macros.py" = ["E501"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
