[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prodockit"
version = "0.6.6"
description = "A family of extensions for Zensical needed for professional and academic documentation: section cross-references, bibliography/citation handling, a glossary, a back-of-book index, a Pandoc/WeasyPrint PDF pipeline, and Jinja macros for word counts and reference-style spacing"
readme = "README.md"
license = "MIT"
authors = [
  { name = "Mark Buckwell" },
]
requires-python = ">=3.10"
keywords = ["markdown", "python-markdown", "zensical", "extension", "pdf", "pandoc"]
dependencies = [
  "Markdown>=3.4",
  "zensical",
  "beautifulsoup4>=4.12",
  "click>=8.0",
  "pypdf>=4.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: Markup :: Markdown",
]

[project.urls]
Homepage = "https://github.com/buckwem/prodockit-extensions"
Documentation = "https://buckwem.github.io/prodockit-extensions/"
Issues = "https://github.com/buckwem/prodockit-extensions/issues"

[project.entry-points."markdown.extensions"]
"prodockit.headings" = "prodockit.headings:HeadingsExtension"
"prodockit.refs" = "prodockit.refs:RefsExtension"
"prodockit.citations" = "prodockit.citations:CitationsExtension"
"prodockit.glossary" = "prodockit.glossary:GlossaryExtension"
"prodockit.tables" = "prodockit.tables:TablesExtension"
"prodockit.bibliography" = "prodockit.bibliography:BibliographyExtension"
"prodockit.index" = "prodockit.index:IndexExtension"

[project.scripts]
prodockit = "prodockit.pdf.cli:main"

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy",
  "types-Markdown",
  "types-beautifulsoup4",
  "pytest",
  "pytest-cov",
  "pymupdf>=1.24",
]
# Only needed for prodockit.pdf.index's own back-of-book index (pdf_include_index) -
# a real Python import (not shelled out to, unlike pandoc/weasyprint), and a
# sizeable one, so it's kept optional rather than a hard dependency every
# prodockit install pays for regardless of whether this feature is ever used.
index = [
  "pymupdf>=1.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/prodockit"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
# En dash is deliberate - prodockit.pdf.index's own back-of-book page-range
# formatting ("67–70"), not a stray look-alike for a hyphen-minus.
allowed-confusables = ["–"]

[tool.ruff.lint.per-file-ignores]
# One CSS/Lua rule (or descriptive test name) per source line - wrapping
# would fragment the generated content's own readability for no benefit.
"src/prodockit/pdf/css.py" = ["E501"]
"src/prodockit/pdf/lua.py" = ["E501"]
"src/prodockit/zensical_macros.py" = ["E501"]
"tests/*" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
